# review-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml  lint.yml  package.yml  release.yml  test.yml
app/: README.md  __init__.py  main.py
app/agents/: __init__.py  architecture_agent.py  base.py  bug_agent.py  context.py  coordinator.py  knowledge_agent.py  quality_agent.py  refactor_agent.py  security_agent.py
app/analyzers/: ruff_adapter.py
app/architecture/: reviewer.py
app/enterprise/: config_loader.py
app/llm/: provider.py
app/llm/prompts/: architecture_review.md
app/models/: __init__.py  issue.py
app/project/: scanner.py
app/report/: cli_formatters.py
app/reviewer/: service.py
app/rules/: base.py
docker/: README.md
docs/: architecture_review.md  auth.md  cli.md  connected_services.md  dashboard.md  deployment.md  docker.md  enterprise_rules.md  github_app.md  hosted_review.md  index.md  mcp.md  model_providers.md  multi_agent.md  privacy.md  public_beta.md  release.md  self_hosting.md
examples/architecture_bad_project/: README.md
examples/enterprise_policy_project/: magicreview.yml
examples/github_app/: README.md
examples/mcp/: README.md
examples/multi_agent_project/: magicreview.yml
magicreview/: __init__.py  _version.py
magicreview/cli/: __init__.py  main.py
magicreview/config/: __init__.py  env.py
magicreview/connected/: __init__.py  policy.py
magicreview/dashboard/: __init__.py  app.py  auth.py  classifier.py  hosted_review.py  model_settings.py  service.py
magicreview/dashboard/static/: style.css
magicreview/dashboard/templates/: base.html  index.html  login.html  model_settings.html  network_audit.html  project_detail.html  projects.html  review_detail.html
magicreview/dashboard/templates/review/: diff.html  github_pr.html  index.html  project.html  result.html
magicreview/integrations/: __init__.py
magicreview/integrations/github/: __init__.py  app.py  commenter.py  config.py  formatter.py  mapper.py  models.py  repository_fetcher.py  reviewer.py  security.py  webhook.py
magicreview/mcp_server/: __init__.py  schemas.py  server.py  tools.py
magicreview/scanner/: __init__.py  excludes.py
magicreview/storage/: __init__.py  database.py  repository.py
mcp_server/: __init__.py  main.py  server.py
mcp_server/tools/: __init__.py  review_tools.py
reviewagent/: __init__.py  _version.py
reviewagent/cli/: main.py
reviewagent/dashboard/: app.py  auth.py  hosted_review.py  model_settings.py
reviewagent/dashboard/templates/review/: diff.html  project.html
reviewagent/integrations/github/: app.py  client.py  config.py  formatter.py  repository_fetcher.py  reviewer.py
reviewagent/storage/: database.py
scripts/: quality_gate.py
tests/: test_architecture_phase5.py  test_cli_phase3.py  test_cli_phase7.py  test_cli_smoke_phase11.py  test_connected_services_phase10.py  test_dashboard_auth_phase11.py  test_dashboard_phase9.py  test_docker_phase11.py  test_docs_phase11.py  test_documentation_phase11_7.py  test_enterprise_config_loader.py  test_enterprise_integration.py  test_fastapi_phase4.py  test_github_app_phase8.py  test_github_full_project_phase11.py  test_hosted_review_phase11.py  test_mcp_server.py  test_mcp_tools.py  test_model_provider_settings_phase11.py  test_packaging_phase11.py  test_phase1_core.py  test_phase6_agents.py  test_project_reviewer.py  test_project_scanner_excludes_phase11.py
