[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magicreview"
version = "0.1.3"
description = "MagicReview: a local-first, self-hostable AI code review platform."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "KrisMagical" },
]
maintainers = [
    { name = "KrisMagical" },
]
keywords = [
    "magicreview",
    "mgreview",
    "ai-code-review",
    "code-review",
    "local-first",
    "self-hosted",
    "mcp",
    "github-app",
    "llm",
    "static-analysis",
    "enterprise-rules",
    "dashboard",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "httpx>=0.27",
    "networkx",
    "pydantic",
    "pyyaml",
    "radon",
    "ruff",
]

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "ruff",
    "setuptools>=68",
    "twine",
    "wheel",
]
dashboard = [
    "fastapi",
    "itsdangerous",
    "jinja2",
    "python-multipart",
    "uvicorn",
]
github = [
    "fastapi",
    "httpx",
    "PyJWT",
    "uvicorn",
]
llm = [
    "httpx",
    "openai",
]
mcp = [
    "mcp",
]
all = [
    "fastapi",
    "httpx",
    "itsdangerous",
    "jinja2",
    "mcp",
    "openai",
    "PyJWT",
    "python-multipart",
    "uvicorn",
]

[project.urls]
Homepage = "https://github.com/KrisMagical/review-agent"
Repository = "https://github.com/KrisMagical/review-agent"
Issues = "https://github.com/KrisMagical/review-agent/issues"
Documentation = "https://github.com/KrisMagical/review-agent/tree/main/docs"
Changelog = "https://github.com/KrisMagical/review-agent/blob/main/CHANGELOG.md"

[project.scripts]
mgreview = "magicreview.cli.main:main"
mgreview-mcp = "magicreview.mcp_server.server:main"
mgreview-dashboard = "magicreview.dashboard.app:main"
mgreview-github-app = "magicreview.integrations.github.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "mcp_server*", "magicreview*"]

[tool.setuptools.package-data]
"app.llm" = ["prompts/*.md"]
"magicreview.dashboard" = ["templates/*.html", "templates/review/*.html", "static/*.css"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
